--- a/NetBeansProjects/GeeksForGeeks/nbproject/project.properties
+++ b/NetBeansProjects/GeeksForGeeks/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=geeksforgeeks.GeeksForGeeks
+main.class=pairForSum.PairForSum
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
